--- a/README
+++ b/README
@@ -77,8 +77,18 @@ Arguments supported by libnfs are :
                      default it 65534 on Windows and getuid() on unixen.
  gid=<int>         : GID value to use when talking to the server.
                      default it 65534 on Windows and getgid() on unixen.
+ debug=<int>       : Debug level used by libnfs. Default is 0 which is quiet.
+                     Higher values increase verbosity.
  sec=<krb5|krb5i|krb5p>
                    : Specify the security mode.
+ xprtsec=<none|tls|mtls>
+                   : Specify the transport security mode.
+                     none : No TLS security.
+                     tls  : TLS with server authentication only.
+                     mtls : Mutual TLS, both server and client authentication.
+
+                     See CERTIFICATES for details about specifying certificates/keys
+                     that libnfs must use when using "tls" or "mtls" security.
  auto-traverse-mounts=<0|1>
                    : Should libnfs try to traverse across nested mounts
                      automatically or not. Default is 1 == enabled.
@@ -145,6 +155,36 @@ you no longer need to edit the export on the NFS server to set "insecure".
 I do not know what equivalent "capability" support is available on other
 platforms. Please drop me an email if your os of choice has something similar
 and I can add it to the README.
+
+
+CERTIFICATES
+============
+libnfs can read certs from the default system trust store
+(/etc/ssl/certs/ca-certificates.crt on most systems) so if you are using
+xprtsec=tls and server is using a certificate signed by a well know CA somewhere
+in the chain of trust, whose cert is already present in the system trust store,
+then libnfs can correctly read the CA cert from the system trust store and thus
+verify the cert presented by the server. In that case you don't need to specify
+any additional cert/store to libnfs.
+
+If your NFS server's certificate is not signed by a well known CA then you will
+have to let libnfs know the self-signed CA cert used for signing the server's
+certificate to correctly verify the server certificate. You can do this by
+setting the environment variable LIBNFS_TLS_TRUSTED_CA_PEM to point to the
+CA certificate in pem format or LIBNFS_TLS_TRUSTED_CA_DIR to point to a dir
+containing one or more trusted CA certs in pem format.
+
+e.g.
+# export LIBNFS_TLS_TRUSTED_CA_PEM=/tmp/trusted_ca.pem
+# export LIBNFS_TLS_TRUSTED_CA_DIR=/tmp/trusted_ca_dir/
+
+If you want to use mutual TLS (xprtsec=mtls) then you will need a client certificate
+too. You need to provide the client's public certificate and the private key using
+the following environment variables.
+
+e.g.,
+# export LIBNFS_TLS_CLIENT_CERT_PEM=/tmp/client_cert.pem
+# export LIBNFS_TLS_CLIENT_KEY_PEM=/tmp/client_key.pem
 
 
 DOCUMENTATION
