--- a/README
+++ b/README
@@ -79,6 +79,24 @@ Arguments supported by libnfs are :
                      default it 65534 on Windows and getgid() on unixen.
  debug=<int>       : Debug level used by libnfs. Default is 0 which is quiet.
                      Higher values increase verbosity.
+ timeo=<int>       : The time in deciseconds (tenths of a second) libnfs client
+                     waits for a response before it retries an RPC request.
+                     Default value of 'timeo' is 600, i.e., 60 seconds.
+                     Values less than 100, i.e., 10 seconds, are not allowed.
+ retrans=<int>     : The number of times libnfs client retries a request before
+                     it attempts further recovery action. After 'retrans' failed
+                     retries libnfs will generate a "server not responding"
+                     message and then attempt further recovery action.
+                     If no RPC response has been received over the connection
+                     recovery could mean terminating the connection and
+                     attempting RPC retry over a new connection. If other RPC
+                     responses are being received then it'll simply keep retrying
+                     the RPCs for ever at 'timeo' interval. This mimics the
+                     'hard' mount behaviour of NFS clients.
+                     If 'retrans' is 0, then RPC is not retried on timeout but
+                     instead failed with RPC_STATUS_TIMEOUT. This will roughly
+                     mimic the 'soft' mount behaviour of NFS clients.
+                     Default value of 'retrans' is 2.
  sec=<krb5|krb5i|krb5p>
                    : Specify the security mode.
  xprtsec=<none|tls|mtls>
